--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="nav-bar">
         <div class="nav-img">
-            <img src="img/MSP LOGO WHITE 2.png" alt="logo">
+            <img src="MSP LOGO WHITE 2.png" alt="logo">
         </div>
         <div class="nav-text">
             <ul>                                              <!--unordered list-->
@@ -36,22 +36,22 @@
         </div>
         <div class="ourteam-body">
             <div class="item1">
-                <img src="img/avatar.jpg" alt="avatar"> 
+                <img src="avatar.jpg" alt="avatar"> 
                 <h2>Jane cooper</h2>
                 <p>Web Developer</p>
            </div>
         <div class="item2">
-            <img src="img/avatar.jpg" alt="avatar"> 
+            <img src="avatar.jpg" alt="avatar"> 
             <h2>Jane cooper</h2>
             <p>Web Developer</p>
     </div>
     <div class="item3">
-        <img src="img/avatar.jpg" alt="avatar">
+        <img src="avatar.jpg" alt="avatar">
         <h2>Jane cooper</h2>
         <p>Web Developer</p>
 </div>
 <div class="item4">
-    <img src="img/avatar.jpg" alt="avatar">
+    <img src="avatar.jpg" alt="avatar">
      <h2>Jane cooper</h2>
         <p>Web Developer</p>
     </div> 
@@ -65,22 +65,22 @@
         </div>
         <div class="people-content">
             <div class="people-item">
-                    <img class="color1" src="img/tech_phone.jpg">
+                    <img class="color1" src="tech_phone.jpg">
             </div>
             <div class="people-item">
-                <img class="color2" src="img/tech_mic.jpg">
+                <img class="color2" src="tech_mic.jpg">
             </div>
             <div class="people-item">
-                <img class="color3" src="img/tech_drone.jpg">
+                <img class="color3" src="tech_drone.jpg">
             </div>
             <div class="people-item">
-                <img class="color3"src="img/tech_camera.jpg">
+                <img class="color3"src="tech_camera.jpg">
             </div>
             <div class="people-item">
-                <img class="color1" src="img/tech_tablet.jpg">
+                <img class="color1" src="tech_tablet.jpg">
             </div>
             <div class="people-item">
-                <img class="color2" src="img/tech_typewriter.jpg">
+                <img class="color2" src="tech_typewriter.jpg">
             </div>
 
         </div>
